# ChangeLog for dev-libs/glib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.516 2012/04/19 20:29:17 ranger Exp $

  19 Apr 2012; Brent Baude <ranger@gentoo.org> glib-2.30.3.ebuild:
  Marking glib-2.30.3 ppc64 stable for bug 410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> glib-2.30.3.ebuild:
  Stable for amd64, wrt bug #410611

  16 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> glib-2.32.1.ebuild,
  +files/glib-2.32.1-gnustep-not-cocoa.patch:
  Fix building on systems with gnustep-base installed (bug #411981, thanks to
  Carlos Konstanski et al. for reporting).

  14 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> glib-2.32.0.ebuild,
  glib-2.32.1.ebuild, +files/glib-2.32.1-fix-libelf-check.patch:
  Add elfutils/libelf as a runtime dependency, and fix libelf detection. Fix
  datetime tests in non-English locales (bug #411967, thanks to Marien Zwart).

  14 Apr 2012; Alexis Ballier <aballier@gentoo.org> glib-2.32.1.ebuild:
  allow to replace lelfutils by libelf. the former isnt keyworded and doesnt
  build on fbsd while the latter is fine

  14 Apr 2012; Zac Medico <zmedico@gentoo.org> glib-2.32.1.ebuild:
  Add ~amd64-linux keyword.

*glib-2.32.1 (14 Apr 2012)

  14 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> +glib-2.32.1.ebuild:
  Version bump with minor bugfixes.

  27 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org> glib-2.28.8.ebuild,
  glib-2.30.2.ebuild, glib-2.30.2-r1.ebuild, glib-2.30.3.ebuild,
  glib-2.32.0.ebuild:
  Add shared-mime-info to PDEPEND, it's needed for gio/xdgmime to function
  properly (thanks to Gilles Dartiguelongue for pointing out the issue in bug
  #409481).

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> glib-2.30.2.ebuild,
  glib-2.30.2-r1.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #393007

*glib-2.32.0 (25 Mar 2012)

  25 Mar 2012; Nirbheek Chauhan <nirbheek@gentoo.org>